new executable wrapper by Zig